--- a/Courseworks/res/layout/activity_hidden_web_view.xml
+++ b/Courseworks/res/layout/activity_hidden_web_view.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<WebView  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/hiddenWebView"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:visibility="invisible"
-/>
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <WebView
+        android:id="@+id/hidden_web_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="invisible" >
+    </WebView>
+
+    <TextView
+        android:id="@+id/hidden_web_view_status"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:text="@string/hidden_web_view_access"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+</merge>
