--- a/Courseworks/res/menu/course_list_view.xml
+++ b/Courseworks/res/menu/course_list_view.xml
@@ -1,11 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.aisaacroth.courseworks.CourseView" >
+    tools:context="com.aisaacroth.courseworks.CourseListView" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/course_list_signout_option"
+        android:title="@string/course_list_signout_option"/>
 
 </menu>
