--- a/Courseworks/res/layout/activity_announcement_list_view.xml
+++ b/Courseworks/res/layout/activity_announcement_list_view.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aisaacroth.courseworks.views.AnnouncementListView"
+    tools:context="edu.columbia.cuit.courseworks.views.AnnouncementListView"
     tools:ignore="MergeRootFrame" />
