--- a/Courseworks/res/layout/activity_course_list_view.xml
+++ b/Courseworks/res/layout/activity_course_list_view.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aisaacroth.courseworks.views.CourseListView"
+    tools:context="edu.columbia.cuit.courseworks.views.CourseListView"
     tools:ignore="MergeRootFrame" >
 
     <android.support.v4.view.ViewPager
