--- a/Courseworks/res/layout/course_list_item.xml
+++ b/Courseworks/res/layout/course_list_item.xml
@@ -10,12 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/announcement_blue"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:text="Class Name" />
     
     <LinearLayout
         android:id="@+id/course_item_subtext_1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal" >
         
         <TextView
@@ -23,20 +24,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/dark_gray"
-            android:textSize="12sp" />
+            android:textSize="12sp" 
+            android:text="COMSW1004" />
         
         <TextView
             android:id="@+id/course_item_professor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/dark_gray"
-            android:textSize="12sp" />
+            android:textSize="12sp" 
+            android:text="Adam Cannon" />
         
     </LinearLayout>
     <LinearLayout 
         android:id="@+id/course_item_subtext_2"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
         
         <TextView
@@ -44,14 +47,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:textSize="12sp" 
+            android:text="M, W, 11:40-12:55"/>
         
         <TextView 
             android:id="@+id/course_item_meeting_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="12sp"/>
+            android:textSize="12sp"
+            android:text="301 NorthWest"/>
     </LinearLayout>
     
 
