--- a/Courseworks/res/layout/activity_course_list_holder_view.xml
+++ b/Courseworks/res/layout/activity_course_list_holder_view.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.columbia.cuit.courseworks.views.CourseListView"
+    tools:context="edu.columbia.cuit.courseworks.views.CourseListHolderView"
     tools:ignore="MergeRootFrame" >
 
     <android.support.v4.view.ViewPager
@@ -17,13 +17,13 @@
     </android.support.v4.view.ViewPager>
 
     <RelativeLayout
-        android:id="@+id/main_datetime"
+        android:id="@+id/course_datetime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/main_current_date"
+            android:id="@+id/course_update_date"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
@@ -31,7 +31,7 @@
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/main_update_time"
+            android:id="@+id/course_update_time"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
