--- a/Courseworks/res/layout/fragment_course_list_view.xml
+++ b/Courseworks/res/layout/fragment_course_list_view.xml
@@ -1,21 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/announcements"
+    android:id="@+id/courses_next"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aisaacroth.courseworks.AnnouncementView$PlaceholderFragment" >
+    tools:context="edu.columbia.cuit.courseworks.NextCourseListView$PlaceholderFragment" >
 
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
+        android:layout_height="match_parent"
         android:drawSelectorOnTop="false" />
-
+    
     <TextView
         android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/no_announcements" />
+        android:text="@string/no_courses" />
 
 </RelativeLayout>
