--- a/Courseworks/res/menu/list_view.xml
+++ b/Courseworks/res/menu/list_view.xml
@@ -3,7 +3,7 @@
     tools:context="com.aisaacroth.courseworks.AnnouncementListView" >
 
     <item
-        android:id="@+id/announcement_list_signout_option"
+        android:id="@+id/list_signout_option"
         android:title="@string/announcement_list_signout_option" />
 
 </menu>
