--- a/Courseworks/res/values/strings_activity_course_list.xml
+++ b/Courseworks/res/values/strings_activity_course_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+   <string name="course_list_title">Courses</string>
    <string name="course_list_signout_option">Sign Out</string> 
    <string name="no_courses">There are no courses</string>
 </resources>
