--- a/Courseworks/res/layout/course_list_actionbar.xml
+++ b/Courseworks/res/layout/course_list_actionbar.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:gravity="center_horizontal" >
 
         <TextView
             android:id="@+id/course_list_actionbar_back"
