--- a/Courseworks/res/layout/course_list_actionbar.xml
+++ b/Courseworks/res/layout/course_list_actionbar.xml
@@ -25,8 +25,7 @@
             android:id="@+id/course_list_actionbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:text="@string/course_list_title"
             android:textColor="@color/black" />
     </RelativeLayout>
