--- a/Courseworks/res/values/styles.xml
+++ b/Courseworks/res/values/styles.xml
@@ -15,7 +15,8 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:actionBarStyle">@style/ActionBarWhite</item>
+        <item name="android:displayOptions">showCustom|showHome</item>
     </style>
 
     <style name="ActionBarMain" parent="@android:style/Theme.Holo.Light">
